# EffervescenceViewer

./: README.md
indra/: CMakeLists.txt
indra/cmake/: CMakeLists.txt  Effervescence.cmake  StateMachine.cmake
indra/effervescence/: CMakeLists.txt  aversion.cpp  aversion.h  awavefront.cpp  awavefront.h  extra_functionality.h  special_functionality.cpp  special_functionality.h
indra/newview/: CMakeLists.txt  llviewermenu.cpp
indra/newview/app_settings/: settings_effervescence.xml
indra/newview/skins/default/xui/en-us/: menu_pie_attachment.xml  menu_pie_avatar.xml  menu_pie_object.xml  menu_pie_self.xml
